Top level pages

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,11 +34,11 @@
     {% include header.html %}
     {% include navigation-sliding.html %}
 
-<div class="page-lead" style="background-image:url(//mmistakes.github.io/skinny-bones-jekyll/images/wood-texture-1600x800.jpg)">
+<div class="page-lead" style="background-image:url(/images/home.jpg)">
   <div class="wrap page-lead-content">
       <h1>Pencil2D Animation</h1>
       <h2>An easy, intuitive tool to make hand-drawn animations.</h2>
-        <a href="//" class="btn-inverse">Start Using Pencil2D</a> &nbsp; or &nbsp; <a href="https://github.com/pencil2d/pencil" class="btn-inverse">View on GitHub</a>
+        <a href="/download" class="btn-inverse">Start Using Pencil2D</a> &nbsp; or &nbsp; <a href="https://github.com/pencil2d/pencil" class="btn-inverse">View on GitHub</a>
   </div><!-- /.page-lead-content -->
 
 </div><!-- /.page-lead -->
