--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -61,7 +61,8 @@
 
     <script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"></script>
     <script src="{{ site.url }}/js/main.js"></script>
-
+   
+    {% include analytics.html %}
   </body>
 
 </html>
