Tutorial on Landing page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,8 +37,9 @@
 <div class="page-lead" style="background-image:url(/images/home.jpg)">
   <div class="wrap page-lead-content">
       <h1>Pencil2D Animation</h1>
-      <h2>An easy, intuitive tool to make hand-drawn animations.</h2>
-        <a href="/download" class="btn-inverse">Start Using Pencil2D</a> &nbsp; or &nbsp; <a href="https://github.com/pencil2d/pencil" class="btn-inverse">View on GitHub</a>
+      <h2>An easy, intuitive tool to make hand-drawn 2D animations.</h2>
+         <a href="/download" class="btn-inverse">Start Using Pencil2D</a> &nbsp; or &nbsp;
+         <a href="/doc/tutorials" class="btn-inverse">Learn with Video Tutorials</a>
   </div><!-- /.page-lead-content -->
 
 </div><!-- /.page-lead -->
