--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{% if page.title %}{{ page.title }} • {% endif %}{{ site.title }}</title>
+    <title>{{ site.title }}</title>
     {% if page.excerpt %}<meta name="description" content="{{ page.excerpt | strip_html }}">{% endif %}
     {% if page.tags %}<meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %}
     {% if page.author %}
@@ -37,7 +37,7 @@
 <div class="page-lead" style="background-image:url(/images/home.jpg)">
   <div class="wrap page-lead-content">
       <h1>Pencil2D Animation</h1>
-      <h2>An easy, intuitive tool to make hand-drawn 2D animations.</h2>
+      <h2>An easy, intuitive tool to make 2D hand-drawn animations.</h2>
          <a href="/download" class="btn-inverse">Start Using Pencil2D</a> &nbsp; or &nbsp;
          <a href="/doc/tutorials" class="btn-inverse">Learn with Video Tutorials</a>
   </div><!-- /.page-lead-content -->
