Add discord image & link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
     <meta http-equiv="cleartype" content="on">
 
     <link rel="stylesheet" href="/css/main.css">
+    <style type="text/css">
+      {% include mystyle.html %}
+    </style>
     <!-- HTML5 Shiv and Media Query Support for IE -->
     <!--[if lt IE 9]>
       <script src="{{ site.url }}/js/vendor/html5shiv.min.js"></script>
