--- a/_sass/jekyll-theme-cayman-blog.scss
+++ b/_sass/jekyll-theme-cayman-blog.scss
@@ -294,7 +294,8 @@ a {
   }
 
   table {
-    display: block;
+    display: table;
+    table-layout: fixed;
     width: 100%;
     overflow: auto;
     word-break: normal;
