--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,6 +98,12 @@
           </a>
         </span>
 
+        <span class="my-span-icon">
+          <a href="{{ site.bitbucket.url }}" aria-label="{{ site.github.owner_name }}'s Bitbucket" title="{{ site.github.owner_name }}'s Bitbucket">
+            <svg class="my-svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-1 10.199l-3.64 1.801 3.64 1.796v2.204l-6-2.935v-2.131l6-2.934v2.199zm8 2.866l-6 2.935v-2.204l3.64-1.796-3.64-1.801v-2.199l6 2.935v2.13z"/></svg>
+          </a>
+        </span>
+
         <!-- Twitter icon -->
         <!--
         <span class="my-span-icon">
