--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,18 @@
 ---
 layout: default
 ---
-
 <div>
-
   {{ content }}
-
+  <hr>
+  <h3>Latest News</h3>
+  <ul class="home-post-list">
+    {% for post in site.posts %}
+      <li>
+        {% assign date_format = site.cayman-blog.date_format | default: "%b %-d, %Y" %}
+        <a class="home-post-link" href="{{ post.url | relative_url }}" title="{{ post.title }}">{{ post.title | escape }}</a>
+        <span class="home-post-meta">{{ post.date | date: date_format }}</span>
+      </li>
+    {% endfor %}
+  </ul>
+  
 </div>
