Wrong disqus short name

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,7 +7,7 @@ this.page.url = {{ page.url }};  // Replace PAGE_URL with your page's canonical 
 };
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://{{ site.disqus-shortname }}.disqus.com/embed.js';
+s.src = 'https://pencil2d.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
