Show Site Header on Home page
Completed the conditional to allow for the home page to have the same site header. I lack information as to what was supposed to be put there otherwise, so for now it seems redundant and we could get rid of the conditional altogether, however I'll leave it in case there was a different reason to include it as such.

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -7,6 +7,8 @@
     <img src="/images/pencil_icon.png" style="float:left; width:54px; margin-right: 10px;">
     {% if page.layout != 'home' %}
       <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    {% else %}
+      <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     {% endif %}
 
     {% if page_paths %}
