--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -4,7 +4,12 @@
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
 
-    <img src="/images/pencil_icon.png" style="float:left; width:54px; margin-right: 10px;">
+    {% assign dt = site.time | date: '%m %d' %}
+    {% if dt == '02 14' %}
+      <img src="/images/pencil_icon_valentines.png" style="float:left; width:54px; margin-right: 10px;">
+    {% else %}
+      <img src="/images/pencil_icon.png" style="float:left; width:54px; margin-right: 10px;">
+    {% endif %}
     {% if page.layout != 'home' %}
       <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     {% else %}
@@ -25,7 +30,7 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="/download">Download</a>  
+          <a class="page-link" href="/download">Download</a>
           <a class="page-link" href="/community">Community</a>
           <a class="page-link" href="/news.html">News</a>
           <a class="page-link" href="/doc/faq.html">FAQ</a>
