--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -33,7 +33,7 @@
           <a class="page-link" href="/download">Download</a>
           <a class="page-link" href="/community">Community</a>
           <a class="page-link" href="/news.html">News</a>
-          <a class="page-link" href="/doc/faq.html">FAQ</a>
+          <a class="page-link" href="/doc">Docs</a>
           <a class="page-link" href="/contribute">Contribute</a>
         </div>
       </nav>
