--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
       {% if page.layout == 'home' %}
           <a href="/download" class="btn">Download now!</a>
           <a href="/doc/tutorials.html" class="btn">Tutorials</a>
-          <a href="/news" class="btn">What's New?</a>
+          <a href="/2017/12/introducing-pencil2d-0.6.html" class="btn">What's New?</a>
       {% endif %}
       <!-- Post tagline -->
       {% if page.layout == 'post' %}
