Update tutotial page
- embed youtube playlist
- auto expand to 100% for embeded youtube videos.

--- a/_includes/youtubePlayer.html
+++ b/_includes/youtubePlayer.html
@@ -1,2 +1,4 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/{{ include.vid }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+<div class="video-container">
+<iframe class="video" src="https://www.youtube.com/embed/{{ include.vid }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
 </iframe>
+</div>
