--- a/_includes/mystyle.css
+++ b/_includes/mystyle.css
@@ -222,3 +222,17 @@ path:hover{fill:#ef8003;}
 .showreel {
   width:100%;min-height:330px;
 } }
+
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
