Add dropdown menus

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -31,9 +31,26 @@
 
         <div class="trigger">
           <a class="page-link" href="/download">Download</a>
-          <a class="page-link" href="/community">Community</a>
+          <div class="dropdown">
+            <a class="page-link" href="/community">Community</a>
+            <div class="dropdown-content">
+              <a class="page-link" href="https://discuss.pencil2d.org/">Forum</a>
+              <a class="page-link" href="https://www.facebook.com/groups/709024775972087/">Facebook</a>
+              <a class="page-link" href="https://discord.gg/8FxdV2g">Discord</a>
+              <a class="page-link" href="https://www.youtube.com/channel/UCexMjl4rq8OyzAc7C03uKCQ/playlists">Youtube</a>
+              <a class="page-link" href="https://plus.google.com/communities/101311036131376070915">Google+</a>
+              <a class="page-link" href="https://www.tumblr.com/tagged/pencil2d">Tumblr</a>
+            </div>
+          </div>
           <a class="page-link" href="/news.html">News</a>
-          <a class="page-link" href="/doc">Docs</a>
+          <div class="dropdown">
+            <a class="page-link" href="/doc">Docs</a>
+            <div class="dropdown-content">
+              <a class="page-link" href="/doc/tutorials.html">Tutorials</a>
+              <a class="page-link" href="/doc/faq.html">FAQ</a>
+              <a class="page-link" href="/doc/user_manual.html">User's Manual</a>
+            </div>
+          </div>
           <a class="page-link" href="/contribute">Contribute</a>
         </div>
       </nav>
