Use relative_urls where possible

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,12 @@
       <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
     {% endif %}
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=almN0Wkzb6">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=almN0Wkzb6">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=almN0Wkzb6">
-    <link rel="manifest" href="/site.webmanifest?v=almN0Wkzb6">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=almN0Wkzb6" color="#6298ff">
-    <link rel="shortcut icon" href="/favicon.ico?v=almN0Wkzb6">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/apple-touch-icon.png?v=almN0Wkzb6" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png?v=almN0Wkzb6" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png?v=almN0Wkzb6" | relative_url }}">
+    <link rel="manifest" href="{{ "/site.webmanifest?v=almN0Wkzb6" | relative_url }}">
+    <link rel="mask-icon" href="{{ "/safari-pinned-tab.svg?v=almN0Wkzb6" | relative_url }}" color="#6298ff">
+    <link rel="shortcut icon" href="{{ "/favicon.ico?v=almN0Wkzb6" | relative_url }}">
     <meta name="apple-mobile-web-app-title" content="Pencil2D">
     <meta name="application-name" content="Pencil2D">
     <meta name="msapplication-TileColor" content="#2b5797">
