--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -6,9 +6,9 @@
 
     {% assign dt = site.time | date: '%m %d' %}
     {% if dt == '02 14' %}
-      <img src="{{ site.baseurl }}/images/pencil_icon_valentines.png" style="float:left; width:54px; margin-right: 10px;">
+      <img src="{{ "/images/pencil_icon_valentines.png" | relative_url }}" style="float:left; width:54px; margin-right: 10px;">
     {% else %}
-      <img src="{{ site.baseurl }}/images/pencil_icon.png" style="float:left; width:54px; margin-right: 10px;">
+      <img src="{{ "/images/pencil_icon.png" | relative_url }}" style="float:left; width:54px; margin-right: 10px;">
     {% endif %}
     {% if page.layout != 'home' %}
       <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
@@ -30,9 +30,9 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="{{ site.baseurl }}/download">Download</a>
+          <a class="page-link" href="{{ "/download" | relative_url }}">Download</a>
           <div class="dropdown">
-            <a class="page-link" href="{{ site.baseurl }}/community">Community</a>
+            <a class="page-link" href="{{ "/community" | relative_url }}">Community</a>
             <div class="dropdown-content">
               <a class="page-link" href="https://discuss.pencil2d.org/">Forum</a>
               <a class="page-link" href="https://www.facebook.com/groups/709024775972087/">Facebook</a>
@@ -42,16 +42,16 @@
               <a class="page-link" href="https://www.tumblr.com/tagged/pencil2d">Tumblr</a>
             </div>
           </div>
-          <a class="page-link" href="{{ site.baseurl }}/news.html">News</a>
+          <a class="page-link" href="{{ "/news.html" | relative_url }}">News</a>
           <div class="dropdown">
-            <a class="page-link" href="{{ site.baseurl }}/doc">Docs</a>
+            <a class="page-link" href="{{ "/doc" | relative_url }}">Docs</a>
             <div class="dropdown-content">
-              <a class="page-link" href="{{ site.baseurl }}/doc/tutorials.html">Tutorials</a>
-              <a class="page-link" href="{{ site.baseurl }}/doc/faq.html">FAQ</a>
-              <a class="page-link" href="{{ site.baseurl }}/doc/user_manual.html">User's Manual</a>
+              <a class="page-link" href="{{ "/doc/tutorials.html" | relative_url }}">Tutorials</a>
+              <a class="page-link" href="{{ "/doc/faq.html" | relative_url }}">FAQ</a>
+              <a class="page-link" href="{{ "/doc/user_manual.html" | relative_url }}">User's Manual</a>
             </div>
           </div>
-          <a class="page-link" href="{{ site.baseurl }}/contribute">Contribute</a>
+          <a class="page-link" href="{{ "/contribute" | relative_url }}">Contribute</a>
         </div>
       </nav>
     {% endif %}
