--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
 
     <!-- Non social metatags -->
     <meta charset="utf-8">
+    <meta name="description" content="Pencil2D is a simple 2D animation, drawing and painting application that lets you create traditional hand-drawn animation using both bitmap and vector graphics.">
+    <meta name="keywords" content="Pencil2D,animation,drawing,software,bitmap,raster,vector,cartoon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#157878">
