Rename user-manual page

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -48,7 +48,7 @@
             <div class="dropdown-content">
               <a class="page-link" href="{{ "/doc/tutorials.html" | relative_url }}">Tutorials</a>
               <a class="page-link" href="{{ "/doc/faq.html" | relative_url }}">FAQ</a>
-              <a class="page-link" href="{{ "/doc/user_manual.html" | relative_url }}">User's Manual</a>
+              <a class="page-link" href="{{ "/doc/user-manual.html" | relative_url }}">User's Manual</a>
             </div>
           </div>
           <a class="page-link" href="{{ "/contribute" | relative_url }}">Contribute</a>
