--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
       {% if page.layout == 'home' %}
           <a href="/download" class="btn">Download now!</a>
           <a href="/doc/tutorials.html" class="btn">Tutorials</a>
-          <a href="/2018/09/maintenance-release-0.6.2.html" class="btn">What's New?</a>
+          <a href="/2019/03/pencil2d-0.6.3-release.html" class="btn">What's New?</a>
       {% endif %}
       <!-- Post tagline -->
       {% if page.layout == 'post' %}
