Introduce tabs for other ways of installing pencil2d

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
     <style type="text/css">
       {% include mystyle.css %}
     </style>
+    {% if page.tabs == true %}{% include tabs.html %}{% endif %}
   </head>
   <body>
 
