--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -38,7 +38,7 @@
               <a class="page-link" href="https://www.facebook.com/groups/709024775972087/">Facebook</a>
               <a class="page-link" href="https://discord.gg/8FxdV2g">Discord</a>
               <a class="page-link" href="https://www.youtube.com/channel/UCexMjl4rq8OyzAc7C03uKCQ/playlists">Youtube</a>
-              <a class="page-link" href="https://www.tumblr.com/tagged/pencil2d">Tumblr</a>
+              <a class="page-link" href="https://pencil2d-software.tumblr.com/">Tumblr</a>
             </div>
           </div>
           <a class="page-link" href="{{ "/news.html" | relative_url }}">News</a>
