Update Hacktoberfest 2020 Logos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
         {% endif %}
         {% if page.layout == 'hacktoberfest' %}
           {% unless page-tagline %}
-            <img src="{{ "/images/hacktoberfest-icon.png" | relative_url }}" style="height: 4rem;vertical-align: middle;" alt="" aria-hidden="true" />
+            <img src="{{ "/images/hacktoberfest-icon.svg" | relative_url }}" style="height: 4rem;vertical-align: middle;" alt="" aria-hidden="true" />
           {% endunless %}
         {% endif %}
         {{ page-title }}
