--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,29 +5,11 @@
 
     <!-- Non social metatags -->
     <meta charset="utf-8">
-    <meta name="description" content="Pencil2D is a simple 2D animation, drawing and painting application that lets you create traditional hand-drawn animation using both bitmap and vector graphics.">
-    <meta name="keywords" content="Pencil2D,animation,drawing,software,bitmap,raster,vector,cartoon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="theme-color" content="#157878">
 
-    {% if page.title %}
-      {% assign page-title = page.title | escape %}
-    {% else %}
-      {% assign page-title = site.title | escape %}
-    {% endif %}
-
-    <title>{{ page-title }} - Open source animation software</title>
-
-    {% if site.gems contains "jekyll-seo-tag" %}
-      <!-- jekyll-seo-tag -->
-    {% else %}
-      {% include social-metatags.html %}
-    {% endif %}
-
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-
-    {% if site.gems contains "jekyll-feed" %}
+    {% seo %}
+    {% if site.plugins contains "jekyll-feed" %}
       <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
     {% endif %}
 
@@ -41,12 +23,6 @@
     <meta name="application-name" content="Pencil2D">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
-
-    <meta name="robots" content="noarchive">
-
-    <!-- <link rel="alternate" media="only screen and (max-width: 640px)" href="">
-    <link rel="alternate" media="handheld" href=""> -->
-
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
@@ -87,7 +63,7 @@
             <img src="{{ "/images/hacktoberfest-icon.svg" | relative_url }}" style="height: 4rem;vertical-align: middle;" alt="" aria-hidden="true" />
           {% endunless %}
         {% endif %}
-        {{ page-title }}
+        {{ page.title | default: site.title | escape }}
       </h1>
       <h2 class="project-tagline">
         {% if page.layout == 'gsoc' and page-tagline %}
