--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/WebPage" lang="{{ page.lang | default: site.lang | default: "en" }}">
-
   <head>
-
     <!-- Non social metatags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -113,9 +111,10 @@
           </a>
         </span>
 
+        <!-- Bitbucket icon -->
         <span class="my-span-icon">
           <a href="{{ site.bitbucket.url }}" aria-label="{{ site.github.owner_name }}'s Bitbucket" title="{{ site.github.owner_name }}'s Bitbucket">
-            <svg class="my-svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-1 10.199l-3.64 1.801 3.64 1.796v2.204l-6-2.935v-2.131l6-2.934v2.199zm8 2.866l-6 2.935v-2.204l3.64-1.796-3.64-1.801v-2.199l6 2.935v2.13z"/></svg>
+            <svg class="my-svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-6.551 6.411l13.101.023c.28 0 0.49.233.443.513l-1.912 11.679c-.047.21-.233.373-.443.373h-9.138c-.303 0-.559-.21-.606-.513l-1.888-11.563c-.047-.256.163-.513.443-.513zm8.019 8.346h-2.914l-.769-4.126h4.406l-.723 4.126z"/></svg>
           </a>
         </span>
 
@@ -126,17 +125,18 @@
           </a>
         </span>
 
-        <!-- RSS icon -->
-        {% if site.gems contains "jekyll-feed" %}
+        {% if site.plugins contains "jekyll-feed" %}
+          <!-- RSS icon -->
           <span class="my-span-icon">
             <a href="{{ "/feed.xml" | relative_url }}" aria-label="RSS feed" title="{{ site.github.owner_name }}'s RSS feed">
               <svg class="my-svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-3.374 17c-.897 0-1.626-.727-1.626-1.624s.729-1.624 1.626-1.624 1.626.727 1.626 1.624-.729 1.624-1.626 1.624zm3.885 0c-.03-3.022-2.485-5.474-5.511-5.504v-2.406c4.361.03 7.889 3.555 7.92 7.91h-2.409zm4.081 0c-.016-5.297-4.303-9.571-9.592-9.594v-2.406c6.623.023 11.985 5.384 12 12h-2.408z"/></svg>
             </a>
           </span>
         {% endif %}
-        <!-- Contact icon -->
+
         {% assign about_page = site.pages | where: "path", "about.md" | first %}
         {% if about_page.title %}
+          <!-- Contact icon -->
           <span class="my-span-icon">
             <a href="mailto:pencil2danimation@gmail.com" aria-label="Contact" title="Contact {{ site.github.owner_name }}">
               <svg class="my-svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 .02c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.99 6.98l-6.99 5.666-6.991-5.666h13.981zm.01 10h-14v-8.505l7 5.673 7-5.672v8.504z"/></svg>
