Add translation support

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,3 +1,4 @@
+{% include translations %}
 <br><hr />
 <div id="disqus_thread"></div>
 <script>
@@ -12,4 +13,4 @@ s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<noscript>{{ translations.disqus_no_javascript[page.language] }}</noscript>
