--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -1,29 +1,34 @@
 <style>
  /* Style the tab */
- .tab {
+ .tabs {
   overflow: hidden;
-  border: 1px solid #ccc;
   background-color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  border: none;
 }
 
 /* Style the buttons that are used to open the tab content */
-.tab button {
+.tabs button {
   background-color: inherit;
   float: left;
   border: none;
+  border-radius: 8px;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+  padding: 7px 16px;
+  margin: 0 7px 7px;
   transition: 0.3s;
 }
 
 /* Change background color of buttons on hover */
-.tab button:hover {
+.tabs button:hover {
   background-color: #ddd;
 }
 
 /* Create an active/current tablink class */
-.tab button.active {
+.tabs button.active {
   color: #fff;
   background-color: #005cc0;
 }
@@ -34,7 +39,7 @@
   padding: 18px 6px 12px 6px;
   border: 0px solid #ccc;
   border-top: none;
-} 
+}
 </style>
 <script>
 function openTab(evt, tabName) {
@@ -55,5 +60,5 @@ function openTab(evt, tabName) {
   // Show the current tab, and add an "active" class to the button that opened the tab
   document.getElementById(tabName).style.display = "block";
   evt.currentTarget.className += " active";
-} 
+}
 </script>
