Move legacy builds to alternate install section

--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -14,7 +14,7 @@
   background-color: inherit;
   float: left;
   border: none;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   outline: none;
   cursor: pointer;
   padding: 7px 16px;
