--- a/_includes/mystyle.css
+++ b/_includes/mystyle.css
@@ -1,5 +1,3 @@
-
-
 .tile {
     max-width:68em;
     margin-left:auto;
@@ -13,11 +11,23 @@
 .tile p { font-size: 0.9em; }
 
 .community-tile {
-    max-width:68em;
-    margin-left:auto;
-    margin-right:auto;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
     margin-bottom:1.618em;
     padding-bottom: 1em;
+    overflow: hidden;
+}
+.community-tile img {
+    border-bottom: 1px solid #ccc;
+}
+.community-tile h2 {
+    margin-bottom: 0.5rem;
+}
+.community-tile hr {
+    margin: 0 1rem;
+}
+.community-tile p {
+    margin: 0.5rem;
 }
 
 .download-tile {
@@ -29,16 +39,13 @@
     box-sizing: border-box;
     font-size: 0.9em;
 }
-
 .download-tile h3 {
     margin: 0.5rem 0;
 }
-
 .download-tile hr {
     margin: 0 0 0.5rem;
     vertical-align: sub;
 }
-
 .download-tile .vertical-separator {
     display: inline-block;
     width: 2px;
@@ -71,7 +78,6 @@
         margin-right: 5%;
     }
     .community-tile {
-        float: left;
         width: 45%;
         margin-right:5%;
         border: solid 1px #999;
@@ -91,7 +97,6 @@
         margin-right: 2%;
     }
     .community-tile {
-        float: left;
         width: 31%;
         margin-right:2%;
         border: solid 1px #ccc;
@@ -197,6 +202,13 @@
     .toc-left ul {
         margin-bottom:.809em
     }
+}
+
+.community-tiles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
 }
 
 .download-tiles {
