--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,15 @@ layout: default
         <span class="home-post-meta">{{ post.date | date: date_format }}</span>
       </li>
     {% endfor %}
+    <li>
+      <a class="home-post-link" href="{{ "/news.html" | relative_url }}">More News...</a>
+    </li>
   </ul>
   
+  <br/>
+
+  <h3>User Showreel</h3>
+  <div>
+    <iframe class="showreel" src="https://www.youtube.com/embed/ma52j9B1kEM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+  </div>
 </div>
