Improve readiblity with higher color contrast between font/background

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
       {% endif %}</p>
   </header> -->
 
-  <div itemprop="articleBody">
+  <div itemprop="articleBody" class="post-content">
     {{ content }}
   </div>
 
