--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,9 +73,9 @@
         {{ page-tagline }}
       </h2>
       {% if page.layout == 'home' %}
-          <a href="/download" class="btn">Download now!</a>
-          <a href="/doc/tutorials.html" class="btn">Tutorials</a>
-          <a href="/2021/02/pencil2d-0.6.6-release.html" class="btn">What's New?</a>
+          <a href="{{ /download | relative_url }}" class="btn">Download now!</a>
+          <a href="{{ /doc/tutorials.html | relative_url }}" class="btn">Tutorials</a>
+          <a href="{{ /2021/02/pencil2d-0.6.6-release.html | relative_url }}" class="btn">What's New?</a>
       {% endif %}
       <!-- Post tagline -->
       {% if page.layout == 'post' %}
